[ci] Use official github actions for github pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  deploy-website:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,15 +24,34 @@ jobs:
           haxelib install all --always
           haxelib list
 
+      - name: Setup Pages
+        id: pages_config
+        uses: actions/configure-pages@v5
+
       - name: Generate website
         run: |
           haxe generate.hxml
-
-      - name: Deploy
-        if: github.repository_owner == 'HaxeFoundation' && github.ref == 'refs/heads/master'
-        run: haxe deploy.hxml
         env:
-          GHP_EMAIL: haxe-ci@onthewings.net
-          GHP_USERNAME: Haxe CI Bot
-          GHP_ROOT: https://nekovm.org
-          GHP_REMOTE: ${{ secrets.GHP_REMOTE }}
+          GHP_ROOT: ${{steps.pages_config.outputs.base_url}}
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
+
+  deploy:
+    if: github.ref == 'refs/heads/master'
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    steps:
+      - name: Deploy artifact
+        id: deployment
+        uses: actions/deploy-pages@v4
