[CI] hardcode GHP_ROOT for now (but use / while travis used nekovm.org)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           haxe generate.hxml
         env:
-          GHP_ROOT: nekovm.org
+          GHP_ROOT: /
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
