[CI] Try using gh-pages branch with github actions instead

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,26 +26,13 @@ jobs:
         run: |
           haxe generate.hxml
         env:
-          GHP_ROOT: /
+          GHP_ROOT: nekovm.org
+          # GHP_ROOT: ${{steps.pages_config.outputs.base_url}}
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Publish on GitHub Pages
+        if: github.ref == 'refs/heads/master'
+        uses: ftnext/action-push-ghpages@v1.0.0
         with:
-          path: ./out
+          build_dir: ./out
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  deploy:
-    if: github.ref == 'refs/heads/master'
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
-    steps:
-      - name: Deploy artifact
-        id: deployment
-        uses: actions/deploy-pages@v4
