--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,24 @@ jobs:
         run: |
           haxe generate.hxml
 
-      - name: Publish on GitHub Pages
-        if: github.ref == 'refs/heads/master'
-        uses: ftnext/action-push-ghpages@v1.0.0
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          build_dir: ./out
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          path: ./out
 
+  deploy:
+    if: github.ref == 'refs/heads/master'
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    steps:
+      - name: Deploy artifact
+        id: deployment
+        uses: actions/deploy-pages@v4
