[ci] hardcode https://nekovm.org GHP_ROOT
(can't set it with protocol in config)
(try again but let cloudfront update this time...)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Generate website
         run: |
           haxe generate.hxml
+        env:
+          GHP_ROOT: https://nekovm.org
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
